# bluesky-queueserver-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bluesky_queueserver_mcp/: __init__.py  app.py  chat.py  cli.py  server.py
bluesky_queueserver_mcp/_tools/: __init__.py  environment.py  history.py  items.py  locks.py  misc.py  permissions.py  plans_devices.py  queue.py  re_control.py  scripting.py  status.py  tasks.py
tests/: test_nl.py  test_smoke.py
